apps/vagrant/stream-jellyfin/deploy/ingress-homepage-widget.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    gethomepage.dev/widget.key: "changeme"
